# drosix

./: .flake8  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  env.sh  requirement.txt  rustfmt.toml
.cargo/: config  config.toml  id_rsa  runner.sh
br2-drosix-tree/: Config.in  README.md  external.desc  external.mk
br2-drosix-tree/board/beagleboneblue/: README.md  genimage.cfg  linux.config  post-image.sh  uEnv.txt
br2-drosix-tree/board/beagleboneblue/patches/bluez5_utils/: 0001-sixaxis-bypass-service-authorization.patch
br2-drosix-tree/board/beagleboneblue/patches/linux/: 0002-enable-pru-uio-and-adc.patch
br2-drosix-tree/board/beagleboneblue/rootf_overlay/etc/: hosts
br2-drosix-tree/board/beagleboneblue/rootf_overlay/etc/ifplugd/: ifplugd.conf
br2-drosix-tree/board/beagleboneblue/rootf_overlay/etc/init.d/: S30usbgadget  X55servopower
br2-drosix-tree/board/beagleboneblue/rootf_overlay/root/.ssh/: authorized_keys
br2-drosix-tree/board/beagleboneblue/rootfs_overlay/etc/: dnsmasq.conf  modules  udhcpd.conf  wpa_supplicant.conf
br2-drosix-tree/board/beagleboneblue/rootfs_overlay/etc/init.d/: S02modules  S40bluetooth  S56pru_e_b
br2-drosix-tree/board/beagleboneblue/rootfs_overlay/etc/network/: interfaces
br2-drosix-tree/board/beagleboneblue/rootfs_overlay/root/.ssh/: authorized_keys
br2-drosix-tree/configs/: beagleboneblue_defconfig
br2-drosix-tree/package/librobotcontrol/: 0001-fix-makefile.patch  Config.in  librobotcontrol.hash  librobotcontrol.mk
doc/: book.toml  buildroot.md  workspace.dsl  workspace.json
doc/drosix/docs/: 00-index.md  parameters.md  pru_interface.md
doc/src/: SUMMARY.md  control_model.md  controller.md  dev_env.md  flight_controller.md  model.md  pid.md  ps3_controller.md
doc/workspace-adr/: 0001-record-architecture-decisions.md
doc/workspace-docs/: 00-index.md  01-devenv.md  02-buildroot.md  03-model.md  04-control.md  pid.md
docker/: Dockerfile  entrypoint.sh
drone/: Cargo.toml  README.md  build.rs  cbindgen.toml
drone/.cargo/: config.toml
drone/examples/: controller.rs  esc.rs  pru_pid.rs  sensors.rs  test_motors.rs
drone/src/: config.rs  controller.rs  drone.rs  esc.rs  flight_controller.rs  lib.rs  log.rs  main.rs  messages.rs  mock.rs  mpu.rs  plugin.rs  polling.rs  remote.rs  rtc_server.rs  sensor.rs  server.rs  shadow.rs  types.rs
drosix-api/: Cargo.toml
drosix-api/src/: lib.rs
message/: Cargo.toml
message/src/: lib.rs
model/: Cargo.toml  attitude.py  constants.py  controller.py  design.py  drosix.toml  drosix_model.toml  model.py  motor.ipynb  motors.py  pid-tunning.ipynb  pid_tuner.py  plot_measures.py  plotter.py  pyproject.toml  requirement.txt  requirements.txt  utils.py
model/src/: lib.rs
pru/: Makefile  README.md  am335x.ld  controller.c  controller.h  drosix.h  motor.c  util.h
pru/src/: controller.c  drosix.h  motor.c  pid.c  pid.h  pid_test.c  servo.asm  shared-memory.h  util.h
pru/tests/: pid.py  utils.py
server/: Cargo.toml  htpasswd  htpasswd-ssl.sh
server/src/: lib.rs  main.rs  rtc_server.rs  shadow.rs
webapp/: Cargo.toml  index.css  index.html  index.scss  package.json  webpack.config.js  webrtc.js
webapp/src/: api.rs  app.rs  lib.rs  main.rs  store.rs
webapp/src/agents/: drosix.rs  mod.rs  store.rs
webapp/src/components/: chart.rs  controller.rs  joystick.rs  mod.rs  visualizer.rs
webapp/src/routes/: login.rs  login.scss
webapp/src/services/: drosix.rs  mod.rs  touch.rs  webrtc_binding.rs
webapp/static/: index.css  index.html
