cargo-features = ["per-package-target"]

[package]
name = "drone"
version = "0.1.0"
authors = ["Thomas Chamelot <chamelot.thomas@gmail.com>"]
edition = "2021"
default-target = "armv7-unknown-linux-gnueabihf"


[dependencies]
# Flight controller
hal                 = { version = "0.3", package = "linux-embedded-hal" }
mio                 = { version = "0.7", features = ["os-poll", "os-ext", "net"] } 
prusst              = { git = "https://github.com/tchamelot/prusst" }
gpio-cdev           = "0.5"
bitmask-enum        = "2.2.3"

# Server
tokio               = { version = "1.13", features = ["macros", "rt", "sync"] }
futures             = { version = "0.3", features = ["alloc"], default-features = false }
warp                = "0.2"
bytes               = "0.5"
webrtc-unreliable   = { git = "https://github.com/tchamelot/webrtc-unreliable.git" }

# Parameters
serde               = { version = "1.0", features = ["derive"] }
toml                = "0.8"

# Remote controller
gilrs = "0.10"

anyhow              = "1.0"
[dependencies.mpu9250]
git         = "https://github.com/tchamelot/mpu9250"
branch      = "drosix"
features    = ["i2c", "dmp_quat6", "dmp_accel", "dmp_gyro", "dmp_motion"]

[build-dependencies]
cbindgen = "0.26"
heck = "0.4"

[features]
default = []
mock = []
