cargo-features = ["per-package-target"]

[package]
name = "drone"
version = "0.1.0"
authors = ["Thomas Chamelot <chamelot.thomas@gmail.com>"]
edition = "2021"
default-target = "armv7-unknown-linux-gnueabihf"


[dependencies]
# Flight controller
hal                 = { version = "0.3", package = "linux-embedded-hal" }
mio                 = { version = "1.0", features = ["os-poll", "os-ext"] } 
mpu9250             = { version = "0.25", features = ["i2c", "dmp"] }
prusst              = { git = "https://github.com/tchamelot/prusst" }
thread-priority     = "1.1"

# Parameters
serde               = { version = "1.0", features = ["derive"] }
toml                = "0.8"

# Remote controller
gilrs = "0.10"

anyhow              = "1.0"
signal-hook         = "0.3"
log                 = { version = "0.4", features = ["max_level_info", "release_max_level_warn"] }
function-timer      = { version = "0.8", optional = true}
metrics-util        = { version = "0.17", optional = true, features = ["debugging"], default-features = false }
rstats              = { version = "2.1", optional = true }

[build-dependencies]
cbindgen = "0.26"
heck = "0.4"

[features]

profiling = ["dep:function-timer", "dep:metrics-util", "dep:rstats"]
