[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[dependencies.peroxide]
version = "0.30"
default-features = false
features = ["csv"]

[lib]
name = "model_lib"
crate-type = ["dylib"]
