[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "model"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "numpy",
    "scipy",
    "control",
    "slycot",
    "sympy",
    "matplotlib",
    "toml",
    "pandas",
    "cffi"
    ]

[tool.block]
line-length = 90

