[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio               = { version = "1.13", features = ["macros", "rt", "sync"] }
futures             = { version = "0.3", features = ["alloc"], default-features = false }
typed-builder       = "0.9"

warp                = { version = "0.3", features = ["tls"] }
bytes               = "1.0"

webrtc-unreliable   = "0.5"

pwhash              = "1.0"
libc                = "0.2"

drosix-api          = { path = "../drosix-api" }
rkyv                = "0.7"
