[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-builder       = "0.9"

tokio               = { version = "1.13", features = ["macros", "rt", "sync"] }
warp                = { version = "0.3", features = ["tls"] }
bytes               = "1.0"

pwhash              = "1.0"
libc                = { version = "0.2", optional = true }

[features]
default = []
shadow = ["dep:libc"]
