cargo-features = ["per-package-target"]
[package]
name = "drosix-webapp"
version = "0.1.0"
authors = ["Thomas Chamelot <chamelot.thomas@gmail.com>"]
edition = "2018"
forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"

log = "0.4"
wasm-logger = "0.2"

wasm-bindgen-futures = "0.4.10"
js-sys = "0.3"
gloo = "0.6"
yew = "0.19"
yew-router = "0.16"

reqwasm = "0.5"

# strum = "0.17"
# strum_macros = "0.17"
# reqwest = { version = "0.11", features = ["json"] }
# serde = { version = "1", features = ["rc"] }
# serde_json = "1.0"
# serde_derive = "1"
# rkyv = "0.7"
# yew-agent = "0.1"
# plotters = "0.2.12"
# circular-queue = "0.2.4"
# futures-signals = "0.3.15"
# futures = "0.3.4"
# drosix-api = {path = "../drosix-api" }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = "0.4.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'RtcDataChannel',
  'RtcDataChannelInit',
  'RtcPeerConnection',
  'RtcSdpType',
  'RtcSessionDescriptionInit',
  'RtcIceCandidateInit',
  'MouseEvent',
  'TouchEvent',
  'TouchList',
  'Touch',
]

[dependencies.wasm-bindgen]
version = "0.2"
features = [
  'nightly',
]
