cargo-features = ["per-package-target"]
[package]
name = "drosix-webapp"
version = "0.1.0"
authors = ["Thomas Chamelot <chamelot.thomas@gmail.com>"]
edition = "2018"
forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
wasm-logger = "0.2"

wasm-bindgen-futures = "0.4.10"
yew = "0.19"

reqwasm = "0.5"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = "0.4.4"

[dependencies.wasm-bindgen]
version = "0.2"
features = [
  'nightly',
]
